[gd_scene load_steps=5 format=3 uid="uid://b4wn65tr8mhar"]

[ext_resource type="Texture2D" uid="uid://bny71eggyfrfk" path="res://art/ui/player_card_bg.png" id="1_rlncd"]
[ext_resource type="Script" path="res://scripts/player_card.gd" id="1_uthev"]
[ext_resource type="Theme" uid="uid://dss4hlpng3bfh" path="res://theme/default.tres" id="2_eqg7s"]
[ext_resource type="PackedScene" uid="uid://cbpueawmxyb1q" path="res://scenes/wire_box.tscn" id="3_hsgd4"]

[node name="PlayerCard" type="Control"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 3
anchors_preset = 0
offset_right = 370.0
offset_bottom = 350.0
script = ExtResource("1_uthev")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -175.0
offset_right = 175.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rlncd")
expand_mode = 1
stretch_mode = 5

[node name="background" type="Sprite2D" parent="."]
visible = false
position = Vector2(185, 150)
scale = Vector2(0.8, 0.82)
texture = ExtResource("1_rlncd")

[node name="WireBox" parent="." instance=ExtResource("3_hsgd4")]
layout_mode = 2
offset_left = 201.0
offset_top = 249.0
offset_right = 201.0
offset_bottom = 249.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -179.0
offset_right = 175.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_eqg7s")

[node name="Name" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="ClaimUI" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BombCon" type="HBoxContainer" parent="VBoxContainer/ClaimUI"]
layout_mode = 2

[node name="HaveBomb" type="Label" parent="VBoxContainer/ClaimUI/BombCon"]
layout_mode = 2
text = "No Bomb"

[node name="DWireCon" type="HBoxContainer" parent="VBoxContainer/ClaimUI"]
layout_mode = 2

[node name="DWireLabel" type="Label" parent="VBoxContainer/ClaimUI/DWireCon"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.917647, 0, 1)
text = "Defuse Wires:"

[node name="Count" type="Label" parent="VBoxContainer/ClaimUI/DWireCon"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1

[node name="WireNumCon" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="WiresNum" type="Label" parent="VBoxContainer/WireNumCon"]
layout_mode = 2
text = "Uncut Wires:"

[node name="Count" type="Label" parent="VBoxContainer/WireNumCon"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1

[node name="Spacer" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CheckButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Check Wires"

[node name="FinishedCutLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
offset_right = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Finished their cut"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
